--- a/templates/shop/shop_cart.html
+++ b/templates/shop/shop_cart.html
@@ -17,9 +17,8 @@
         <div class="ogami-breadcrumb" >
             <div class="container" >
                 <ul >
-                    <li ><a class="breadcrumb-link" href="index-2.html" > <i class="fas fa-home" ></i >Home</a ></li >
-                    <li ><a class="breadcrumb-link" href="index-2.html" >Shop</a ></li >
-                    <li ><a class="breadcrumb-link active" href="index-2.html" >Shoping cart</a ></li >
+                    <li ><a class="breadcrumb-link" href="{% url 'shop:home' %}" > <i class="fas fa-home" ></i >Home</a ></li >
+                    <li ><a class="breadcrumb-link active" href="" >Shoping cart</a ></li >
                 </ul >
             </div >
         </div >
