--- a/static/assets/css/invoice_style.css
+++ b/static/assets/css/invoice_style.css
@@ -1,5 +1,5 @@
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,900,700,500,300,100);
+/*@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,900,700,500,300,100);*/
 *{
   margin: 0;
   box-sizing: border-box;
@@ -40,7 +40,7 @@ p{
   position:relative;
   top: -50px;
   height: 350px;
-  background-image: url('http://michaeltruong.ca/images/invoicebg.jpg');
+  /*background-image: url('http://michaeltruong.ca/images/invoicebg.jpg');*/
 
   -webkit-box-shadow:inset 0 2px 4px rgba(0,0,0,.15), inset 0 -2px 4px rgba(0,0,0,.15);
 	-moz-box-shadow:inset 0 2px 4px rgba(0,0,0,.15), inset 0 -2px 4px rgba(0,0,0,.15);
@@ -115,7 +115,7 @@ td{
 }
 form{
   float:right;
-  margin-top: 30px;
+  /*margin-top: 30px;*/
   text-align: right;
 }
 
