--- a/templates/search/search_results.html
+++ b/templates/search/search_results.html
@@ -12,9 +12,12 @@
                 <div class="row" >
                     {% for result in results %}
                         <div class="col-6 col-md-4 col-lg-3 cartable" >
-                            <div class="product coffee" ><a class="product-img" href="{{ result.itemdetails.get_absolute_url }}" ><img
+                            <div class="product coffee" >
+                            <div class="product_images" >
+                                <a class="product-img" href="{{ result.itemdetails.get_absolute_url }}" ><img
                                     class="img-fluid product__image" src="{{ result.images.all.0.image.url }}"
                                     alt="{{ result.itemdetails.get_absolute_url }}" ></a >
+                            </div>
                                 <h5 class="product-type" >{{ result.sub_category.category.category_name }}</h5 >
                                 <h3 class="product-name" >{{ result.title }}</h3 >
                                 {% if result.itemdetails.discount_offer > 0 %}
@@ -26,19 +29,16 @@
                                     <h3 class="product-price" ><small style="font-size: small" >৳</small > {{ result.price }}</h3 >
                                 {% endif %}
                                 <div class="openSidebar" onclick="atcSidebar()" >
-                                    <p hidden class="product__name" >{{ item.pk }}</p >
-                                                    <p hidden class="product__title" >{{ result.title }}</p >
-                                                    <p hidden class="product__price" >{{ result.itemdetails.get_discounted_price }}</p >
-                                                    <button class="all_btn" data-action="ADD_TO_CART" name="btn{{ result.pk }}">Add to cart</button >
+                                    <p hidden class="product__name" >{{ result.pk }}</p >
+                                    <p hidden class="product__title" >{{ result.title }}</p >
+                                    <p hidden class="product__price" >{{ result.itemdetails.get_discounted_price }}</p >
+                                    <button class="all_btn" data-action="ADD_TO_CART" name="btn{{ result.pk }}" >Add to cart</button >
                                 </div >
                                 <div class="product-select" >
                                     <button class="add-to-wishlist round-icon-btn coffee" ><i class="icon_heart_alt" ></i ></button >
-                                    <button class="add-to-cart round-icon-btn coffee cd-add-to-cart js-cd-add-to-cart"
-                                            onclick="location.href='#'" ><i
-                                            class="icon_bag_alt" ></i ></button >
-                                    <button class="add-to-compare round-icon-btn coffee" ><i class="fa-random" ></i ></button >
-                                    <button class="round-icon-btn coffee quickviewbtn" id="quickviewbtn" title="Quick Details"  data-url ="{% url 'shop:quick-view' result.slug %}" ><i
-                                                                class="far fa-eye" ></i ></button >
+                                    <button class="round-icon-btn coffee quickviewbtn" id="quickviewbtn" title="Quick Details"
+                                            data-url="{% url 'shop:quick-view' result.slug %}" ><i
+                                            class="far fa-eye" ></i ></button >
                                 </div >
                             </div >
                         </div >
