--- a/templates/shop/contact.html
+++ b/templates/shop/contact.html
@@ -16,6 +16,14 @@
     <script src="{% static 'assets/cdn/contact_jquery.min.js' %}" ></script >
     <script src="{% static 'assets/cdn/contact_slick.min.js' %}" ></script >
     <div id="main" style="margin-top: 70px">
+        <div class="ogami-breadcrumb" >
+            <div class="container" >
+                <ul >
+                    <li ><a class="breadcrumb-link" href="{% url 'shop:home' %}"  > <i class="fas fa-home" ></i >Home</a ></li >
+                    <li ><a class="breadcrumb-link active" href="" >Contact Ss</a ></li >
+                </ul >
+            </div >
+        </div >
         <div >
             <section class=" slider contact_banner_section" >
                 <div class="container" >
@@ -107,7 +115,7 @@
                                                 <div class="follow" >
                                                     <h4 class="pt-3" >Follow us on</h4 >
                                                     <ul class="social_media_icon pt-3" >
-                                                        <li ><a href="https://www.facebook.com/somikoron/ target="_blank" ><i
+                                                        <li ><a href="https://www.facebook.com/somikoron/" target="_blank" ><i
                                                                 class="fab fa-facebook" ></i ></a ></li >
                                                         <li ><a href="https://twitter.com/Somikoron_com" target="_blank" ><i class="fab fa-twitter" ></i ></a ></li >
                                                         <li ><a href="https://www.instagram.com/_somikoron/" target="_blank" ><i class="fab fa-instagram" ></i ></a ></li >
