--- a/templates/shop/custom_login.html
+++ b/templates/shop/custom_login.html
@@ -15,14 +15,14 @@
     </style>
     <div id="main" style="margin-top: 70px">
 
-        <div class="ogami-breadcrumb" >
-            <div class="container" >
-                <ul >
-                    <li ><a class="breadcrumb-link" href="index-2.html" > <i class="fas fa-home" ></i >Home</a ></li >
-                    <li ><a class="breadcrumb-link active" href="#" >{% trans "LOGIN" %}</a ></li >
-                </ul >
-            </div >
-        </div >
+{#        <div class="ogami-breadcrumb" >#}
+{#            <div class="container" >#}
+{#                <ul >#}
+{#                    <li ><a class="breadcrumb-link" href="index-2.html" > <i class="fas fa-home" ></i >Home</a ></li >#}
+{#                    <li ><a class="breadcrumb-link active" href="#" >{% trans "LOGIN" %}</a ></li >#}
+{#                </ul >#}
+{#            </div >#}
+{#        </div >#}
         <!-- End breadcrumb-->
         {% block content %}
 
@@ -96,13 +96,11 @@
                                 <h1 class="title" >{% trans "LOGIN" %}</h1 >
                                 {% csrf_token %}
                                 <div>
-                                    {{ form.username|as_crispy_field }}
+                                    {{ form.Phone|as_crispy_field }}
                                 </div>
+
                                 <div>
-                                    {{ form.first_name|as_crispy_field }}
-                                </div>
-                                <div>
-                                    {{ form.password1|as_crispy_field }}
+                                    {{ form.Password|as_crispy_field }}
                                 </div>
                                 {% if redirect_field_value %}
                                     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
@@ -111,14 +109,14 @@
                                                                                                       href="{% url 'account_reset_password' %}" >{% trans "Forgot Password?" %}</a >
                                 </div >
                                 <div class="account-function" >
-                                    <button class="no-round-btn" type="submit" >{% trans "Sign In" %}</button >
+                                    <button class="no-round-btn" type="submit" >{% trans "Signup " %} / {% trans "Login " %}</button >
                                     <div class="or-seperator" ><i >or</i ></div >
-                                    <p class="text-center" >Login with your social media account</p ><br >
-                                    <div class="text-center social-btn" >
-                                        <a href="#" class="btn btn-primary" ><i class="social_facebook" ></i >&nbsp; Facebook</a >
-                                        <a href="#" class="btn btn-info" ><i class="social_twitter" ></i >&nbsp; Twitter</a >
-                                        <a href="#" class="btn btn-danger" ><i class="social_googleplus" ></i >&nbsp; Google</a >
-                                    </div >
+{#                                    <p class="text-center" >Login with your social media account</p ><br >#}
+{#                                    <div class="text-center social-btn" >#}
+{#                                        <a href="#" class="btn btn-primary" ><i class="social_facebook" ></i >&nbsp; Facebook</a >#}
+{#                                        <a href="#" class="btn btn-info" ><i class="social_twitter" ></i >&nbsp; Twitter</a >#}
+{#                                        <a href="#" class="btn btn-danger" ><i class="social_googleplus" ></i >&nbsp; Google</a >#}
+{#                                    </div >#}
                                     <br >
 {#                                    <a class="create-account" href="{{ signup_url }}" >Or create an account</a >#}
                                 </div >
