--- a/templates/shop/delivery_status.html
+++ b/templates/shop/delivery_status.html
@@ -8,80 +8,7 @@
         <title >Somikoron | {{ s }}</title >
     </head >
     <body >
-    <div id="main" >
-        <header class="coffee-2" style="margin-top: 75px !important;" >
-            <div class="navigation-filter" >
-                <div class="container" >
-                    <div class="row" >
-                        <div class="col-12 col-md-4 col-lg-4 col-xl-3 order-2 order-md-1" >
-                            <div class="department-menu_block" >
-                                <div class="department-menu d-flex justify-content-between align-items-center" ><i class="fas fa-bars" ></i >All
-                                                                                                                                             departments<span ><i
-                                            class="arrow_carrot-down" ></i ></span ></div >
-                                <div class="department-dropdown-menu" >
-                                    <ul >
-                                        <!-- Nested div for requirement -->
-                                        <div class="vertical-nav" >
-                                            {% for cat in categories %}
-                                                <li ><a href="" ><i ><img style="width: 25px"
-                                                                          src="{% static 'assets/images/custom_icons/' %}{{ cat.category_id }}.png"
-                                                                          alt="" ></i >{{ cat.category_name }}</a >
-                                                    <i class="fa fa-chevron-right float-right" aria-hidden="true" ></i >
-                                                    {% if cat.subcategory_set.count     > 0 %}
-                                                        <ul class="sub-menu" >
-                                                            {% for subcat in cat.subcategory_set.all %}
-                                                                <li ><a href="{{ subcat.get_absolute_url }}" > <i >
-                                                                    <img style="width: 25px"
-                                                                         src="{% static 'assets/images/custom_icons/' %}{{ cat.category_id }}.png"
-                                                                         alt="" >
-                                                                </i >{{ subcat.sub_category_name }}</a ></li >
-                                                            {% endfor %}
-                                                        </ul >
-                                                    {% endif %}
-                                                </li >
-                                            {% endfor %}
-                                        </div >
-                                    </ul >
-                                </div >
-                            </div >
-                        </div >
-                        <div class="col-12 col-md-8 col-lg-8 col-xl-9 order-1 order-md-2" >
-                            <div class="website-search" >
-                                <div class="row no-gutters" >
-                                    <div class="col-0 col-md-0 col-lg-4 col-xl-3" >
-                                        <div class="filter-search" >
-                                            <div class="categories-select d-flex align-items-center justify-content-around" >
-                                                <span >All Categories</span ><i class="arrow_carrot-down" ></i ></div >
-                                            <div class="categories-select_box" >
-                                                <ul >
-                                                    {% for cat in categories %}
-                                                        <li >{{ cat.category_name }}</li >
-                                                    {% endfor %}
-                                                </ul >
-                                            </div >
-                                        </div >
-                                    </div >
-                                    <div class="col-8 col-md-8 col-lg-5 col-xl-7" >
-                                        <div class="search-input" >
-                                            <form id="search-form" action="{% url 'search:searchitems' %}" method="GET"
-                                                  value="{{ request.GET.q }}" >
-                                                <input class="no-round-input no-border" type="text" name="q" value="{{ request.GET.q }}"
-                                                       placeholder="What do you need" />
-                                            </form >
-                                        </div >
-                                    </div >
-                                    <div class="col-4 col-md-4 col-lg-3 col-xl-2" >
-                                        <button class="no-round-btn coffee" type="submit" name="submit" value="Search"
-                                                onclick="document.getElementById('search-form').submit();" >Search
-                                        </button >
-                                    </div >
-                                </div >
-                            </div >
-                        </div >
-                    </div >
-                </div >
-            </div >
-        </header >
+    <div id="main" style="margin-top: 70px" >
         <section class="d-flex align-items-center py-5" >
             <div class="container text-center" >
                 <div class="row justify-content-center pb-5" >
@@ -127,7 +54,7 @@
         <section class="item_part d-flex align-items-center py-5" >
             <div class="container" >
                 <div class="row justify-content-center m-auto" >
-                    <div class="col-lg-6 order-2 order-lg-1"  style="padding-right: 40px">
+                    <div class="col-lg-6 order-2 order-lg-1" style="padding-right: 40px" >
                         <div class="timeline pb-5" >
                             <h4 >Order Timeline</h4 >
                         </div >
@@ -181,17 +108,25 @@
                         </div >
                         <!-- ================================ This row has been used for testing purposes End=========================== -->
                     </div >
-                    <div class="col-lg-6 order-1 order-lg-2" style="margin-top: 100px; ">
+                    <div class="col-lg-6 order-1 order-lg-2" style="margin-top: 100px; " >
                         <div class="row justify-content-center" >
                             <div class="col-lg-12 col-sm-3 col-12 " >
                                 <div class="pr_img" >
-                                    <img src="{% static 'assets/images/product/product02.png' %}" alt="" class="animated_delivery" >
+                                    <span >
+                                        <img src="{{ orders.1.items.all.0.item.images.all.0.image.url }}" style="width: 20%; height: auto" alt=""
+                                             class="animated_delivery" >
+                                        <img src="{{ orders.0.items.all.0.item.images.all.0.image.url }}" style="width: 20%;height: auto"" alt=""
+                                             class="animated_delivery" >
+                                        <img src="{{ orders.3.items.all.0.item.images.all.0.image.url }}" style="width: 20%;height: auto"" alt=""
+                                                                                                         class="animated_delivery" >
+
+                                    </span >
                                     <div class="overlay_image" >
                                         <div class="information" >
                                             <h2 >Item Information</h2 >
                                         </div >
                                         <div class="product_info" >
-                                            <h4 >Name : Fruits</h4 >
+                                            <h4 >Name : </h4 >
                                             <h4 >quantity : 200x2</h4 >
                                             <h4 >Total : 400</h4 >
                                         </div >
