--- a/templates/shop/nav_footer.html
+++ b/templates/shop/nav_footer.html
@@ -126,31 +126,32 @@
         .partner--logo {
             padding: 30px !important;
         }
-    .col-2 .logo img{
-        width: 140px !important;
-        height: auto;
-    }
+
+        .col-2 .logo img {
+            width: 140px !important;
+            height: auto;
+        }
     </style >
     <header class="coffee-2" >
         <nav class="navigation d-flex align-items-center fixed-top" style="padding: 10px;  background-color: whitesmoke" >
             <div class="container" style="padding: 0px" >
                 <div class="row" >
-                    <div class="col-2" style="padding-left: 36px; " ><a class="logo"  href="{% url 'shop:home' %}" ><img
+                    <div class="col-2" style="padding-left: 36px; " ><a class="logo" href="{% url 'shop:home' %}" ><img
                             src="{% static 'assets/images/logo.png' %}" alt="" ></a >
                     </div >
-                    <div class="col-lg-2 navgition-menu d-flex align-items-center justify-content-center" style="width: 20%">
-                            <ul class="mb-0" >
-                                <li class="toggleable" ><a class="menu-item flashbtn" href="{% url 'shop:cattle-shop' %}" >কোরবানি
-                                                                                                                           স্পেশাল<span ></span ><span ></span ><span ></span ><span ></span ></a >
-                                </li >
-                            </ul >
-                        </div >
-                    <div class="col-lg-8" style="padding-left: 0px;">
+                    <div class="col-lg-2 navgition-menu d-flex align-items-center justify-content-center" style="width: 20%" >
+                        <ul class="mb-0" >
+                            <li class="toggleable" ><a class="menu-item flashbtn" href="{% url 'shop:cattle-shop' %}" >কোরবানি
+                                                                                                                       স্পেশাল<span ></span ><span ></span ><span ></span ><span ></span ></a >
+                            </li >
+                        </ul >
+                    </div >
+                    <div class="col-lg-8" style="padding-left: 0px;" >
                         <header class="coffee-2" style="width: 100% !important;" >
                             <div class="navigation-filter" >
                                 <div class="container" >
                                     <div class="row" >
-                                        <div class="col-11 col-md-11 col-lg-11 col-xl-11 " style="padding-left: 0px">
+                                        <div class="col-11 col-md-11 col-lg-11 col-xl-11 " style="padding-left: 0px" >
                                             <div class="website-search" >
                                                 <div class="row no-gutters" >
                                                     <div class="col-0 col-md-0 col-lg-4 col-xl-3" >
@@ -160,7 +161,8 @@
                                                             <div class="categories-select_box" >
                                                                 <ul >
                                                                     {% for cat in categories %}
-                                                                        <li >{{ cat.category_name }}</li >
+                                                                        <li ><a style="color: #636363"
+                                                                                href="{{ cat.get_absolute_url }}" >{{ cat.category_name }}</a ></li >
                                                                     {% endfor %}
                                                                 </ul >
                                                             </div >
@@ -310,6 +312,24 @@
                             </span >
                             </a >
                         </div >
+                    </div >
+                </div >
+                <div class="row" style="margin-top: 15px">
+                    <div class="col-8 " >
+                        <div class="search-input" >
+                            <form id="search-form" action="{% url 'search:searchitems' %}" method="GET"
+                                  value="{{ request.GET.q }}" >
+                                <input style="height: 40px" class="no-round-input no-border" type="text" name="q"
+                                       value="{{ request.GET.q }}"
+                                       placeholder="What do you need" />
+                            </form >
+                        </div >
+                    </div >
+                    <div class="col-4" >
+                        <button style="height: 40px; padding: 10px" class="no-round-btn coffee" type="submit"
+                                name="submit" value="Search"
+                                onclick="document.getElementById('search-form').submit();" >Search
+                        </button >
                     </div >
                 </div >
             </div >
