--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -4,6 +4,7 @@
     <!DOCTYPE html>
     <html lang="en" >
     <head >
+        <title >{% block head_title %} সমীকরণ.কম - Online Shopping in Dhaka {% endblock %}</title >
         {% load static %}
         {#        <style type="text/css" >#}
         {#            html {#}
