Static files are ready to take titles

--- a/templates/shop/about_us.html
+++ b/templates/shop/about_us.html
@@ -2,7 +2,7 @@
 {% block body %}
     {% load static %}
     <head >
-        <title >About Us</title >
+        <title >{% block head_title %} {{page_title}} {% endblock %}</title >
 
     <body >
     <div id="main" >
