--- a/templates/shop/checkout.html
+++ b/templates/shop/checkout.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <!-- For Responsive Device -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Page not found &#8211; Afinda</title>
+        <title >{% block head_title %} {{page_title}} {% endblock %}</title >
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
 <link rel="alternate" type="application/rss+xml" title="Afinda &raquo; Feed" href="https://afinda.vn/feed/" />
