--- a/templates/shop/shop_checkout.html
+++ b/templates/shop/shop_checkout.html
@@ -6,6 +6,7 @@
     <html lang="en" >
     <!-- Mirrored from afinda.vn/html/Ogami/shop_checkout.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Jun 2020 12:00:56 GMT -->
     <head >
+        <title >{% block head_title %} {{page_title}} {% endblock %}</title >
         <style >
             .shop-checkout .form-group {
                 margin-bottom: 15px;
