--- a/templates/shop/special_offer.html
+++ b/templates/shop/special_offer.html
@@ -5,7 +5,7 @@
     <html lang="en" >
     <!-- Mirrored from afinda.vn/html/Ogami/shop_grid+list_3col.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Jun 2020 12:00:51 GMT -->
     <head >
-        <title >Exclusive</title >
+        <title >{% block head_title %} {{page_title}} {% endblock %}</title >
         <meta charset="UTF-8" >
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" >
         <meta name="keywords"
