--- a/templates/shop/wishlist.html
+++ b/templates/shop/wishlist.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <title >{% block head_title %} {{page_title}} {% endblock %}</title >
         <meta charset="UTF-8">
         <!-- For IE -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
