--- a/templates/shop/contact_us.html
+++ b/templates/shop/contact_us.html
@@ -3,7 +3,7 @@
   
 <!-- Mirrored from afinda.vn/html/Ogami/contact_us.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Jun 2020 12:01:00 GMT -->
 <head>
-    <title>Index</title>
+    <title >{% block head_title %} {{page_title}} {% endblock %}</title >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <meta name="keywords" content="blog, business, clean, clear, cooporate, creative, design web, flat, marketing, minimal, portfolio, shop, shopping, unique">
