--- a/templates/shop/delivery_status.html
+++ b/templates/shop/delivery_status.html
@@ -5,7 +5,7 @@
     <html lang="en" >
     <!-- Mirrored from afinda.vn/html/Ogami/shop_grid+list_3col.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Jun 2020 12:00:51 GMT -->
     <head >
-        <title >Somikoron | {{ s }}</title >
+        <title >{% block head_title %} {{page_title}} {% endblock %}</title >
     </head >
     <body >
     <div id="main" >
