--- a/templates/shop/shop_order_complete.html
+++ b/templates/shop/shop_order_complete.html
@@ -7,7 +7,7 @@
     <html lang="en" xmlns="http://www.w3.org/1999/html" >
     <!-- Mirrored from afinda.vn/html/Ogami/shop_order_complete.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 27 Jun 2020 12:00:56 GMT -->
     <head >
-        <title >Order Complete</title >
+        <title >{% block head_title %} {{page_title}} {% endblock %}</title >
         <meta charset="UTF-8" >
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" >
         <meta name="keywords"
